<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="PROG_STEPS" Id="{ab6498e9-066d-4c5c-bd4d-6a6294b7179a}">
    <Declaration><![CDATA[TYPE PROG_STEPS :
STRUCT

	ST1:INT;
	ST2:INT;
	ST3:INT;
	ST4:INT;
	ST5:INT;
	ST6:INT;
	ST7:INT;
	ST8:INT;
	ST9:INT;


END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>