<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="PUMP_PARAMS" Id="{dcfcedb9-d4fd-45ca-b68e-7214757f8e01}">
    <Declaration><![CDATA[TYPE PUMP_PARAMS :
STRUCT
	
(* Général *******************************************************************************************************************)

(* Station 1 Haute tension ***************************************************************************************************)
	ST1_HT_NO_PROG					:INT:=1;			(*Numéro de programme de l'appareil de test HT*)

(* Station 2 aspiration ******************************************************************************************************)
	ST2_CONTRE_PRESSION				:BOOL:=0;			(*Contre pression d'air TRUE: avec contre pression FALSE: sans contre pression*)
	ST2_TEMPS_POMPAGE				:TIME:= T#10S;		(*Temps d'amorcage *)
	ST2_TEMPS_MESURE				:TIME:= T#5S;		(*Temps de mesure *)
		
(* Station 3 étanchéité ******************************************************************************************************)
	ST3_TEMPS_MISE_SOUS_PRESSION	:TIME:= T#5S;		(*Temps de mise sous pression*)
	ST3_TEMPS_STABILISATION			:TIME:= T#5S;		(*Temps de stabilisation de la pression*)
	ST3_TEMPS_MESURE				:TIME:= T#10S;		(*Temps de stabilisation de la pression*)
	
(* Station 4 Débit petit *****************************************************************************************************)

(* Station 5 Débit Grands*****************************************************************************************************)

(* Station 6 Pmax ************************************************************************************************************)	
	ST6_TEMPS_POMPAGE				:TIME:= T#10S;		(*Temps amorcage de la pompte *)
	ST6_TEMPS_MESURE				:TIME:= T#5S;		(*Temps de mesure de Pmax *)
	
(* Station 7 Sechage *********************************************************************************************************)
	ST7_TEMPS_SECHAGE				:TIME:= T#2S;		(*Temps séchage pompe station 7 *)
	
(* Station 9 Déchargement*****************************************************************************************************)
	ST9_BOBINE_A_FIL				:BOOL:=TRUE;		(*Si bobine à fil, utilise de vérin de débloquage des fils *)



END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>