<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="ST9_DECHARGEMENT" Id="{f8e49458-e18e-498d-98aa-1988ba77f0f2}">
    <Declaration><![CDATA[PROGRAM ST9_DECHARGEMENT
VAR
	STEP: INT := 0;
	JIG_STATUS_R_TRIG: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*******************************************************
*
* Station 7 - Séchage
*
*
*********************************************************)
IF NOT(GEMMA.STEP='F1') THEN
	STEP:=0;
END_IF;


CASE STEP OF

0: (*Init*)

	ST9_9V4A := TRUE;
	ST9_9V4B := FALSE;
	ST9_9V5A := FALSE;
	ST9_9V5B := TRUE;
	ST9_9V6 := TRUE;
	ST9_9V7 := FALSE;
	
	FLAGS.ST9_RELEASE_CARRIER := FALSE;
	
	STEP := STEP + 10;
	
10: (*Attend une palette / flanc montant du status*)

	IF JIG_STATUS_R_TRIG.Q THEN
		IF ST9_DECHARGE THEN
			STEP := STEP + 10;
		ELSE
			STEP := 120;
		END_IF;
	END_IF;
	
20: (*Descend le vérin*)

	ST9_9V5A := TRUE;
	ST9_9V5B := FALSE;
	IF PUMP_PARAMS.ST9_BOBINE_A_FIL THEN
		ST9_9V7 := TRUE;
	END_IF;
	STEP := STEP + 10;
	
30: (*Attend que le vérin soit en bas*)

	IF ST9_9B51 THEN
		STEP := STEP + 10;
	END_IF;
	
40: (*Ferme la pince*)

	ST9_9V6 := FALSE;
	STEP := STEP + 10;
	
50: (*Attend que la pince soit fermée*)

	IF ST9_9B6 THEN
		STEP := STEP + 10;
	END_IF;
	
60: (*Monte*)

	ST9_9V5A := FALSE;
	ST9_9V5B := TRUE;
	STEP := STEP + 10;
	
70: (*Attend que le vérin soit en haut*)

	IF ST9_9B5 THEN
		FLAGS.ST9_RELEASE_CARRIER := TRUE;
		ST9_9V7 := FALSE;
		STEP := STEP + 10;
	END_IF;
	
80: (*Déplacement vers déchargement*)

	ST9_9V4A := FALSE;
	ST9_9V4B := TRUE;
	STEP := STEP + 10;
	
90: (*Attend que le vérin soit en haut*)

	IF ST9_9B4 THEN
		STEP := STEP + 10;
	END_IF;
	
100: (*Déplacement vers le bas*)

	ST9_9V5A := TRUE;
	ST9_9V5B := FALSE;
	STEP := STEP + 10;
	
110: (*Attend que le vérin soit en haut*)

	IF ST9_9B51 THEN
		STEP := STEP + 10;
	END_IF;
	
120: (*Libère la pompe*)
	
	ST9_9V6 := TRUE;
	STEP := STEP + 10;
	
130: (*Attend libération*)

	IF ST9_9B6 THEN
		STEP := STEP + 10;
	END_IF;

140: (*Monte*)

	ST9_9V5A := FALSE;
	ST9_9V5B := TRUE;
	STEP := STEP + 10;
	
150: (*Attend vérin en haut*)

	IF ST9_9B5 THEN
		STEP := STEP + 10;
	END_IF;
	
160: (*Retour vers palette*)

	ST9_9V4A := TRUE;
	ST9_9V4B := FALSE;
	STEP := STEP + 10;
	
170: (*Attend vérin en haut*)

	IF ST9_9B41 THEN
		FLAGS.ST9_RELEASE_CARRIER := TRUE;
		STEP := 0;
	END_IF;



ELSE
    (*default case*);
END_CASE;

(*FBs*)

JIG_STATUS_R_TRIG(CLK:= CONVEYOR.JIG_ST9.STATUS);
PROG_STEPS.ST9:=STEP;]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>